# ouroboros_autoseg_plugin

./: .coverage  .gitignore  README.md  backend-dev.cjs  eslint.config.cjs  package-lock.json  package.json  vite.config.ts
.github/workflows/: backend-image.yml  build-and-release.yml
backend/: .dockerignore  Cargo.toml  Dockerfile  RUST_SCAFFOLD.md  compose.dev.yml  compose.gpu.dev.yml  compose.gpu.yml  compose.registry.yml  compose.yml  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/pipeline/: pipeline.py
backend/app/util/: candle_sam3.py  config.py  network.py  util.py
backend/docs/: annotation_metadata.md  candle2_old_pin_baseline.md  checkpoints.md  video_smoke.md
backend/scripts/: benchmark_low_memory_profiles_gpu.sh  biological_video_smoke_gpu.sh
backend/src/: app_state.rs  config.rs  error.rs  lib.rs  main.rs
backend/src/api/: health.rs  jobs.rs  mod.rs  models.rs
backend/src/domain/: jobs.rs  mod.rs  paths.rs  requests.rs  responses.rs
backend/src/domain/paths/: tests.rs
backend/src/imaging/: annotations.rs  mod.rs  output.rs  overlay.rs  preprocess.rs  tiff_io.rs
backend/src/imaging/annotations/: tests.rs
backend/src/imaging/output/: tests.rs
backend/src/imaging/preprocess/: tests.rs
backend/src/imaging/tiff_io/: tests.rs
backend/src/inference/: candle_sam2.rs  candle_sam3.rs  candle_sam3_frame_source.rs  candle_sam3_helpers.rs  image.rs  mod.rs  registry.rs  video.rs
backend/src/inference/candle_sam3_helpers/: tests.rs
backend/src/services/: checkpoints.rs  mod.rs  pipeline.rs  progress.rs  runner.rs  startup.rs  volume.rs
backend/src/services/checkpoints/: tests.rs
backend/src/services/pipeline/: tests.rs
backend/src/services/startup/: tests.rs
backend/src/services/volume/: tests.rs
backend/tests/: ouroboros_annotation_contract.rs  sam3_checkpoint_load.rs  test_annotation_points.py  test_main.py  test_public_functions.py
backend/tests/pipeline/: test_pipeline.py
backend/tests/util/: test_candle_sam3.py  test_config.py  test_network.py  test_util.py
docs/: CANDLE2_LAZY_FRAME_SOURCE.md  CANDLE2_LOW_MEMORY_PROFILE.md
scripts/: prepare-release-artifacts.mjs  validate-release-artifacts.mjs
src/: config.ts  css.d.ts  jobReconnect.test.ts  jobReconnect.ts  main.tsx  styles.css
src/Page/: index.tsx  styles.module.css
src/assets/: styles.module.css
src/components/: ModelsPanel.tsx  OptionsPanel.tsx  ProgressPanel.tsx  VisualizePanel.tsx
