[package]
name = "ouroboros-autoseg-plugin-backend"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[dependencies]
async-trait = "=0.1.77"
candle-core = { path = "../../candle_sam3_main/candle-core", package = "candle-core", version = "0.9.2" }
candle-nn = { path = "../../candle_sam3_main/candle-nn", version = "0.9.2" }
candle-transformers = { path = "../../candle_sam3_main/candle-transformers", version = "0.9.2" }
axum = { version = "=0.6.20", features = ["json", "macros"] }
futures-util = "=0.3.31"
image = { version = "=0.25.10", default-features = false, features = ["jpeg", "tiff"] }
indexmap = "=2.2.6"
reqwest = { version = "=0.11.27", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "=1.0.195", features = ["derive"] }
serde_json = "=1.0.111"
thiserror = "=1.0.56"
tokio = { version = "=1.35.1", features = ["fs", "macros", "rt-multi-thread", "signal", "sync", "time"] }
tower-http = { version = "=0.4.4", features = ["cors", "trace"] }
tracing = "=0.1.40"
tracing-subscriber = { version = "=0.3.18", features = ["env-filter", "fmt"] }
url = "=2.4.1"
uuid = { version = "=1.6.1", features = ["serde", "v4"] }

[dev-dependencies]
tempfile = "=3.10.1"
