[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "ouroboros-autoseg-plugin-backend"
version = "0.1.0"
description = "Backend service for ouroboros autoseg plugin."
authors = []
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
wheel = ">=0.46.2"
fastapi = "*"
uvicorn = "*"
requests = "*"
python-multipart = "*"
numpy = "*"
tifffile = "*"
pydantic = "*"
opencv-python-headless = "*"
huggingface_hub = "*"
pyyaml = "*"
psutil = "*"
einops = "*"
decord = "*"
pycocotools = "*"
sam-2 = { git = "https://github.com/den-sq/sam2.git" }
sam3 = { git = "https://github.com/den-sq/sam3.git" }

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"
pytest-cov = ">=5.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
